# Rustica

./: .gitignore  AGENT_GUIDE.md  Cargo.toml  LaunchPoc.ps1  README.md  seed.md
.github/: copilot-instructions.md  north_star.md  project-structure.md
Core/: Cargo.toml  README.md
Core/src/: lib.rs
Examples/: README.md
Examples/001-Integration/: Cargo.toml
Examples/001-integration_example/: Cargo.toml
Extensions/: Cargo.toml  README.md
Extensions/src/: lib.rs
Foundation/: Cargo.toml  README.md
Foundation/src/: prelude.rs
Prototypes/: Readme.md
Prototypes/001-BasicWindow/: Cargo.toml
Prototypes/001-basic_window/: Cargo.toml
Prototypes/001_basic_window/: Cargo.toml
Prototypes/002-BasicWGPU/: Cargo.toml
Prototypes/002-basic_wgpu/: Cargo.toml
Prototypes/003-BasicTriangle/: Cargo.toml
Prototypes/003-BasicTriangle/src/: main.rs
Prototypes/003-BasicTriangle/src/shaders/: basic_triangle.wgsl
Prototypes/003-basic_triangle/: Cargo.toml
Prototypes/003_basic_triangle/: Cargo.toml
Prototypes/004-AnimatedTriangle/: Cargo.toml
Prototypes/004-animated_triangle/: Cargo.toml
Prototypes/004-animated_triangle/src/: main.rs
Prototypes/005-CustomShader/: Cargo.toml
Prototypes/005-CustomShader/src/: main.rs
Prototypes/005-CustomShader/src/shaders/: custom_shader.wgsl
Prototypes/005-custom_shader/: Cargo.toml
Prototypes/005-custom_shader/src/: main.rs
Prototypes/005-custom_shader/src/shaders/: custom_shader.wgsl
Prototypes/006-BasicMesh/: Cargo.toml
Prototypes/006-BasicMesh/src/: main.rs
Prototypes/006-BasicMesh/src/shaders/: mesh_shader.wgsl
Prototypes/006-basic_mesh/: Cargo.toml
Prototypes/007-UVSphere/: Cargo.toml  README.md
Prototypes/007-UVSphere/src/: main.rs
Prototypes/007-UVSphere/src/shaders/: sphere_shader.wgsl
Prototypes/007-uv_sphere/: Cargo.toml
Prototypes/008-Teapot/: Cargo.toml  README.md
Prototypes/008-Teapot/src/: main.rs
Prototypes/008-Teapot/src/shaders/: teapot_shader.wgsl
Prototypes/008-teapot_prototype/: Cargo.toml
Prototypes/009-ECS-Conway/: Cargo.toml  README.md
Prototypes/009-rustica_ecs_prototype/: Cargo.toml
Prototypes/010-ECS-Conway-Graphics/: Cargo.toml  README.md
Prototypes/010-ECS-Conway-Graphics/src/: components.rs  main.rs
Prototypes/010-ECS-Conway-Graphics/src/shaders/: conway_shader.wgsl
Prototypes/010-ECS-Conway-Graphics/src/systems/: animation_systems.rs  mod.rs  render_system.rs  spawner_system.rs
Prototypes/010-rustica_ecs_conway_graphics/: Cargo.toml
Prototypes/010-rustica_ecs_conway_graphics/src/: components.rs  main.rs
Prototypes/010-rustica_ecs_conway_graphics/src/systems/: animation_systems.rs  mod.rs
crates/core/: Cargo.toml
crates/core/crates/rustica-render-utils/: Cargo.toml
crates/core/crates/rustica-render-utils/src/: geometry.rs  lib.rs  pipeline.rs  projection.rs  resources.rs
crates/core/crates/rustica-window/: Cargo.toml
crates/core/crates/rustica-window/src/: application.rs  lib.rs  window.rs
crates/core/crates/shader-bindings/: CHANGELOG.md  Cargo.toml  README.md  goals.md
crates/core/crates/shader-bindings/shaders/: pbr.wgsl
crates/core/crates/shader-bindings/src/: lib.rs
crates/core/src/: lib.rs
crates/graphics/: Cargo.toml  README.md
crates/graphics/src/: lib.rs  prelude.rs
crates/graphics/src/primitives/: camera.rs  mod.rs
crates/graphics/src/primitives/shapes/: cube.rs  factory.rs  mod.rs  plane.rs  sphere.rs  teapot.rs
crates/graphics/src/shaders/: pbr.frag.wgsl  pbr.vert.wgsl
crates/render/: Cargo.toml  README.md
crates/render-derive/: Cargo.toml  README.md
crates/render-derive/src/: lib.rs
crates/render-derive/tests/: duplicate_locations.rs  instance_attributes.rs  texture_bindings.rs  trybuild_tests.rs  uniform_bindings.rs  vertex_format.rs  vertex_format_test.rs
crates/render-derive/tests/ui/: array_stride_alignment.rs  duplicate_binding_error.stderr  duplicate_location_error.rs  duplicate_location_error.stderr  step_mode_config.rs  uniform_bindings_auto.rs  vertex_format_corrupted.rs  vertex_format_corrupted.stderr  vertex_format_diagnostic.rs
crates/rustica/: Cargo.toml  MODULE_GUIDE.md
crates/rustica-conway/: Cargo.toml
crates/rustica-ecs/: Cargo.toml  README.md
crates/rustica/src/: lib.rs
crates/rustica_base_wgsl_bindings/: Cargo.toml  build.rs
crates/rustica_build/: Cargo.toml
crates/rustica_common/: Cargo.toml
crates/rustica_common/src/: lib.rs  plugin.rs  resource.rs
crates/rustica_conway/: Cargo.toml
crates/rustica_core/: Cargo.toml  MODULE_GUIDE.md
crates/rustica_core/src/: app.rs  error.rs  lib.rs  plugin.rs
crates/rustica_debug_render/: Cargo.toml  MODULE_GUIDE.md
crates/rustica_debug_render/src/: command.rs  debug_renderer.rs  error.rs  lib.rs  plugin.rs  primitives.rs  star_renderer.rs  systems.rs
crates/rustica_ecs/: Cargo.toml  MODULE_GUIDE.md
crates/rustica_ecs/src/: component.rs  entity.rs  error.rs  lib.rs  plugin.rs  query.rs  time.rs  world.rs
crates/rustica_event/: Cargo.toml  MODULE_GUIDE.md
crates/rustica_event/src/: error.rs  event.rs  event_system.rs  event_tests.rs  lib.rs  plugin.rs  plugin_tests.rs
crates/rustica_foundation/: Cargo.toml
crates/rustica_geometry/: Cargo.toml
crates/rustica_geometry/src/: improved_sphere.rs
crates/rustica_graphics/: Cargo.toml
crates/rustica_math/: Cargo.toml  MODULE_GUIDE.md
crates/rustica_math/src/: error.rs  lib.rs  mat4.rs  plugin.rs  quat.rs  vec2.rs  vec3.rs
crates/rustica_render/: Cargo.toml  MODULE_GUIDE.md
crates/rustica_render/src/: canvas.rs  draw_commands.rs  error.rs  input.rs  lib.rs  plugin.rs  render_context.rs  render_window.rs  renderer.rs  resources.rs  window.rs
crates/rustica_render/src/tests/: mod.rs
crates/rustica_render_derive/: Cargo.toml
crates/window/: Cargo.toml
docs/: api_conventions.md  architecture.md  implementation_rules.md  render_pipeline.md  testing_standards.md
planning/: .gitignore  README.md  backlog.md  bugs.md  definition_of_done.md
rustica-shader-bindings/: Cargo.toml  build.rs  goals.md
rustica-shader-bindings/src/: lib.rs  shader_bindings.rs
(+103 files in other folders)
