[workspace]
members = [
    "rustica-shader-bindings",
]
resolver = "2"

[workspace.dependencies]
glam      = { version = "0.30", features = ["bytemuck"] }
bytemuck  = { version = "1.22.0", features = ["derive"] }
wgpu = { version = "24.0.3" }
winit = "0.30.9"
raw-window-handle = "0.6.0"
pollster = "0.4.0"
once_cell = "1.19.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
trybuild = "1.0"
rand = "0.9.0"
wgsl_bindgen = "0.18.1"

# Local crates
