[package]
name = "rustica_core"
version = "0.1.0"
edition = "2024"
description = "Core engine for Rustica"

[dependencies]
rustica_foundation = { path = "../Foundation" }
rustica_graphics = { path = "../crates/graphics" }
rustica_render = { path = "../crates/render" }
rustica_render_derive = { path = "../crates/render-derive" }
rustica_window = { path = "../crates/window" }
rustica-ecs = { path = "../crates/rustica-ecs", optional = true }

[features]
default = []
ecs = ["rustica-ecs"]  # Optional ECS feature
