[package]
name = "rustica-shader-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime dependencies needed by generated code or library logic
glam = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] } # Ensure derive feature is enabled if needed by generated code
wgpu = { workspace = true }

# Add build dependency
[build-dependencies]
wgsl_bindgen = { workspace = true } # Use workspace version
