[package]
name = "basic_triangle"
version = "0.1.0"
edition = "2024"

[dependencies]
rustica_render = { path = "../../crates/render" }
rustica_render_derive = { path = "../../crates/render-derive" }
rustica_foundation = { path = "../../Foundation" }
rustica_standard_shader = { path = "../../crates/standard-shader" }
wgpu = "24.0.3"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"
winit = "0.30.9"
