[package]
name = "basic_triangle"
version = "0.1.0"
edition = "2024"

[dependencies]
rustica_render = { path = "../../crates/rustica_render" }
rustica_render_derive = { path = "../../crates/rustica_render_derive" }
rustica_foundation = { path = "../../crates/rustica_foundation" }
rustica_standard_shader = { path = "../../crates/rustica_standard_shader" }
rustica_graphics = { path = "../../crates/rustica_graphics" }
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true }
winit = { workspace = true }
