[package]
name = "animated_triangle"
version = "0.1.0"
edition = "2024"

[dependencies]
rustica_render = { workspace = true }
rustica_render_derive = { workspace = true }
rustica_foundation = { workspace = true }
rustica_standard_shader = { workspace = true }
rustica_graphics = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true }
winit = { workspace = true }

