[package]
name = "custom_shader"
version = "0.1.0"
edition = "2024"

[dependencies]
rustica_render = { path = "../../crates/rustica_render" }
rustica_render_derive = { path = "../../crates/rustica_render_derive" }
rustica_foundation = { path = "../../crates/rustica_foundation" }
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
glam = { workspace = true }
winit = { workspace = true }
