[package]
name = "basic-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
rustica_graphics = { path = "../../crates/graphics" } 
rustica_window = { path = "../../crates/window" }
rustica_render = { path = "../../crates/render" }
rustica_render_derive = { path = "../../crates/render-derive" }
rustica_standard_shader = { path = "../../crates/standard-shader" } # Added standard-shader
rustica_standard_geometry = { path = "../../crates/standard-geometry" } # Added standard-geometry

rustica_foundation = { path = "../../Foundation" }
# rustica_graphics = { path = "../../crates/graphics" } # Removed graphics dependency
cgmath = "0.18.0" # Note: standard-shader uses cgmath, but glam is used in standard-geometry. Consider unifying.
glam = "0.27.0" # Added glam as it's used by standard-geometry
wgpu = "24.0.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
