[package]
name = "basic_mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
rustica_graphics = { path = "../../crates/rustica_graphics" }
rustica_window = { path = "../../crates/rustica_window" }
rustica_render = { path = "../../crates/rustica_render" }
rustica_shaders = { path = "../../crates/rustica_shaders" }
rustica_geometry = { path = "../../crates/rustica_geometry" }

rustica_foundation = { path = "../../crates/rustica_foundation" }
glam = "0.30.1"
wgpu = "24.0.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
