[package]
name = "teapot-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
wgpu = "24.0.3"
rustica_foundation = { path = "../../Foundation" }
rustica_graphics = { path = "../../crates/graphics" }
rustica_render = { path = "../../crates/render", features = ["derive"] }
