[package]
name = "teapot-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.30.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
wgpu = "24.0.3"
rustica_foundation = { path = "../../Foundation" }
rustica_graphics = { path = "../../crates/graphics" }
rustica_render = { path = "../../crates/render" }
rustica_standard_geometry = { path = "../../crates/standard-geometry" }
rustica_standard_shader = { path = "../../crates/standard-shader" }