[package]
name = "teapot_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
wgpu = { workspace = true }
rustica_foundation = { workspace = true }
rustica_graphics = { workspace = true }
rustica_render = { workspace = true }
rustica_standard_geometry = { workspace = true }
rustica_standard_shader = { workspace = true }