[package]
name = "rustica-ecs-conway-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
rustica_foundation = { path = "../../Foundation" }
rustica-ecs = { path = "../../crates/rustica-ecs" }
rustica-conway = { path = "../../crates/rustica-conway" }
rustica_window = { path = "../../crates/window" }
rustica_render = { path = "../../crates/render", features = ["derive"] }
rustica_graphics = { path = "../../crates/graphics" }
wgpu = "24.0.3"
winit = "0.30.9"
cgmath = "0.18"
pollster = "0.4.0"
rand = "0.9.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
