[package]
name = "rustica_ecs_conway_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
rustica_foundation = { workspace = true }
rustica_ecs = { workspace = true }
rustica_conway = { workspace = true }
rustica_window = { workspace = true }
rustica_render = { workspace = true }
rustica_graphics = { workspace = true }
rustica_standard_geometry = { workspace = true }
rustica_standard_shader = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
