[package]
name = "rustica-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustica-shader-bindings = { path = "crates/shader-bindings"}
rustica-render-utils = { path = "crates/rustica-render-utils"}
