[package]
name = "rustica_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
rustica_window = { path = "../window" }
rustica_render = { path = "../render" }
# rustica_render_derive = { path = "../render-derive" } # Removed
rustica_foundation = { path = "../../Foundation" }
glam = "0.30.1"
wgpu = "24.0.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
pollster = "0.4.0"

[features]
default = []
