[package]
name = "rustica_render_derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for rustica_render"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
bytemuck = "1.14"

[dev-dependencies]
trybuild = "1.0"
wgpu = "24.0.3"
rustica_render = { path = "../render" }
rustica_foundation = { path = "../../Foundation" }
