[package]
name = "rustica"
version = "0.1.0"
edition = "2021"
authors = ["Rustica Contributors"]
description = "A modular, testable game engine written in Rust"
repository = "https://github.com/username/rustica"
license = "MIT"

[dependencies]
rustica_core = { path = "../rustica_core" }
rustica_ecs = { path = "../rustica_ecs" }
rustica_math = { path = "../rustica_math" }
rustica_scheduler = { path = "../rustica_scheduler" }

[features]
default = ["math", "scheduler"]
full = ["math", "scheduler"]
math = []
scheduler = []
