[package]
name = "rustica"
version = "0.1.0"
edition = "2021"
authors = ["Rustica Contributors"]
description = "A modular, testable game engine written in Rust"
repository = "https://github.com/username/rustica"
license = "MIT"

[dependencies]
rustica_core = { path = "../rustica_core" }
rustica_ecs = { path = "../rustica_ecs" }
cgmath = "0.18.0"
rustica_scheduler = { path = "../rustica_scheduler" }
rustica_render = { path = "../rustica_render", optional = true }
rustica_debug_render = { path = "../rustica_debug_render", optional = true }

[features]
default = ["math", "scheduler"]
full = ["math", "scheduler", "render", "debug_render"]
math = []
scheduler = []
render = ["rustica_core/render", "rustica_render"]
debug_render = ["render", "rustica_debug_render"]
