[package]
name = "rustica_common"
version = "0.1.0"
edition = "2021"
authors = ["Rustica Contributors"]
description = "Common interfaces and types for the Rustica game engine"
repository = "https://github.com/username/rustica"
license = "MIT"

[dependencies]
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
