[package]
name = "rustica_geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.30.1" # Using glam as it's common in Rust graphics and used elsewhere (check versions)
rustica_shaders = { path = "../rustica_shaders" } # Corrected path and name
rustica_foundation = { path = "../rustica_foundation" } # Corrected path
rustica_render = { path = "../rustica_render" } # Corrected path

[lib]
name = "rustica_geometry"
path = "src/lib.rs"
