[package]
name = "rustica_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
rustica_window = { path = "../rustica_window" }
rustica_render = { path = "../rustica_render" }
rustica_render_derive = { path = "../rustica_render_derive" }
rustica_foundation = { path = "../rustica_foundation" }
glam = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
pollster = { workspace = true }

[features]
default = []
