[package]
name = "rustica_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
rustica_window = { workspace = true }
rustica_render = { workspace = true }
rustica_render_derive = { workspace = true }
rustica_foundation = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
pollster = { workspace = true }

[features]
default = []
