[package]
name = "rustica_math"
version = "0.1.0"
edition = "2021"
authors = ["Rustica Contributors"]
description = "Math utilities for the Rustica game engine"
repository = "https://github.com/username/rustica"
license = "MIT"

[dependencies]
rustica_core = { path = "../rustica_core" }
thiserror = "1.0"
approx = "0.5"  # For float comparisons in tests

[dev-dependencies]
criterion = "0.4"
