[package]
name = "rustica_render"
version = "0.1.0"
edition = "2021"
description = "Rendering system for the Rustica game engine"
authors = ["Rustica Team"]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0"
rustica_core = { path = "../rustica_core" }
rustica_ecs = { path = "../rustica_ecs" }
rustica_common = { path = "../rustica_common" }
cgmath = "0.18.0"
log = "0.4"
winit = "0.28.6"
