[package]
name = "rustica_render"
version = "0.1.0"
edition = "2024"
description = "Rendering module for Rustica engine"

[dependencies]
rustica_window = { path = "../window" }
rustica_foundation = { path = "../../Foundation" }
wgpu = "24.0.3"
pollster = "0.4.0"
raw-window-handle = "0.6.0"
winit = "0.30.9"
bytemuck = "1.14"
glam = "0.30.1"
once_cell = "1.19.0"

[dev-dependencies]
# Add any test-specific dependencies here

[features]
# Feature for tests that require a GPU
test-gpu = []
# Re-export the window crate's test-display feature
test-display = ["rustica_window/test-display"]

